Revision history for Perl extension Template::Semantic

0.05  Thu Mar  4 15:50:50 JST 2010
        - allow Template::Semantic->call_filter
        - better GLOB detection
        - More Cookbook
        - POD fixes

0.04  Sun Feb 14 14:29:12 JST 2010
        - Fix HIERARCHY_REQUEST_ERR when element to replace is root

0.03  Thu Feb 11 03:09:48 JST 2010
        - POD fixes only (thanks Hans Dieter Pearcey)

0.02  Wed Feb 10 18:33:17 JST 2010
        - $out->as_string return fragment XHTML as XHTML. (thanks fujiwara-san)
        - Auto fixes & => &amp; if recover > 0
        - Add accessor $out->dom
        - Support more CSS selector
        - More examples
        - More tests
        - POD fixes (thanks Terrence Brannon)

0.01  Mon Feb  8 22:58:01 JST 2010
        - original version