@@ -1,5 +1,7 @@
 Revision history for Perl extension Template::Semantic
 
+        - Require Test::More 0.94 for subtest()
+
 0.05  Thu Mar  4 15:50:50 JST 2010
         - allow Template::Semantic->call_filter
         - better GLOB detection
